refactor: add store preview image scale type 'center crop'

--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -53,6 +53,7 @@
                 tools:text="봉구스 밥버거" />
 
             <ImageView
+                android:scaleType="centerCrop"
                 android:id="@+id/store_image_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
