feat: add user information in user fragment (hard coding)

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -27,7 +27,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="48dp"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/user_image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,15 +35,15 @@
                 android:id="@+id/user_name_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="12dp"
                 android:fontFamily="@font/noto_sans_kr_bold"
-                android:text="@{user.name}"
+                android:text="이준호 "
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="@id/round_user_imageview"
                 app:layout_constraintStart_toEndOf="@id/round_user_imageview"
                 app:layout_constraintTop_toTopOf="@id/round_user_imageview"
-                tools:text="으아아악" />
+                app:layout_constraintVertical_bias="0.464" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/wallet_layout"
@@ -76,7 +76,7 @@
                     android:textSize="28sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/wallet_text"
-                    tools:text="120 코인" />
+                    android:text="120 코인" />
 
                 <ImageView
                     android:layout_width="wrap_content"
