--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -14,6 +14,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:overScrollMode="never"
         tools:context=".presentation.main.user.UserFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -147,6 +148,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/heart_recyclerview"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
