--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -53,20 +53,20 @@
                 tools:text="봉구스 밥버거" />
 
             <ImageView
-                android:scaleType="centerCrop"
                 android:id="@+id/store_image_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/dummy_store"
                 app:layout_constraintTop_toBottomOf="@id/store_name" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                app:layout_constraintTop_toBottomOf="@id/store_image_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:paddingStart="24dp"
                 android:paddingEnd="24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:layout_constraintTop_toBottomOf="@id/store_image_preview">
 
                 <TextView
                     android:id="@+id/introduce_store_textview"
@@ -78,7 +78,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -105,7 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="20dp"
                     android:drawablePadding="3dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
                     android:gravity="center_vertical"
@@ -130,6 +130,17 @@
                     app:layout_constraintStart_toEndOf="@id/store_hearts"
                     app:layout_constraintTop_toTopOf="@id/store_hearts"
                     tools:text="23" />
+
+                <Button
+                    android:fontFamily="@font/noto_sans_kr_medium"
+                    android:textSize="14sp"
+                    android:text="정보 추가하기"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/aquamarine"
+                    app:layout_constraintBottom_toBottomOf="@id/store_comments"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/store_comments" />
 
                 <TextView
                     android:id="@+id/store_picture_textview"
@@ -163,75 +174,75 @@
 
                 <TextView
                     android:id="@+id/store_menu_textview"
-                    android:fontFamily="@font/noto_sans_kr_medium"
-                    android:textSize="18sp"
-                    android:textColor="@color/black"
-                    app:layout_constraintTop_toBottomOf="@id/store_picture_imageview"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="16dp"
-                    android:text="메뉴"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/noto_sans_kr_medium"
+                    android:text="메뉴"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/store_picture_imageview" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/store_menu_recyclerview"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/store_menu_textview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/store_menu_textview" />
 
                 <TextView
                     android:id="@+id/store_comments_textview"
-                    android:fontFamily="@font/noto_sans_kr_medium"
-                    android:textSize="18sp"
-                    android:textColor="@color/black"
-                    app:layout_constraintTop_toBottomOf="@id/store_menu_recyclerview"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="16dp"
-                    android:text="댓글"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/noto_sans_kr_medium"
+                    android:text="댓글"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/store_menu_recyclerview" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/write_comment_layout"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
                     android:layout_width="match_parent"
-                    android:background="@drawable/comment_gray_box"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/store_comments_textview"
-                    android:layout_height="wrap_content">
+                    android:background="@drawable/comment_gray_box"
+                    android:paddingStart="16dp"
+                    android:paddingTop="15dp"
+                    android:paddingEnd="16dp"
+                    android:paddingBottom="15dp"
+                    app:layout_constraintTop_toBottomOf="@id/store_comments_textview">
 
                     <EditText
-                        android:background="@null"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:fontFamily="@font/noto_sans_kr_medium"
-                        android:textSize="12sp"
-                        android:textColorHint="@color/color_gray"
-                        android:hint="댓글 달기 .."
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:fontFamily="@font/noto_sans_kr_medium"
+                        android:hint="댓글 달기 .."
+                        android:textColorHint="@color/color_gray"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:src="@drawable/ic_add_comment"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_add_comment"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/store_comment_recyclerview"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/write_comment_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/write_comment_layout" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
