--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="data"
+            type="com.implude.niche.PlaceByIdQuery.Data" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -33,6 +36,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/noto_sans_kr_medium"
+                android:text="@{data.place.category.label}"
                 android:textColor="@color/aquamarine"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/go_back_arrow"
@@ -46,6 +50,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/noto_sans_kr_bold"
+                android:text="@{data.place.name}"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/store_category"
@@ -120,12 +125,14 @@
                     android:drawablePadding="3dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
                     android:gravity="center_vertical"
-                    android:text="370"
+                    android:text='@{String.format("%d", data.place.heartQuantity)}'
                     android:textColor="@color/color_pink"
                     android:textSize="16sp"
                     app:drawableStartCompat="@drawable/ic_heart"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/store_tags_wrapper" />
+                    app:layout_constraintTop_toBottomOf="@+id/store_tags_wrapper"
+                    tools:drawableStart="@drawable/ic_heart"
+                    tools:text="77" />
 
                 <TextView
                     android:id="@+id/store_comments"
@@ -134,9 +141,10 @@
                     android:layout_marginStart="16dp"
                     android:drawablePadding="3dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
+                    android:text='@{String.format("%d", data.place.comment.size)}'
                     android:textColor="@color/color_gray"
                     android:textSize="16sp"
-                    app:drawableStartCompat="@drawable/ic_add_comment"
+                    app:drawableStartCompat="@drawable/ic_comment"
                     app:layout_constraintBottom_toBottomOf="@id/store_hearts"
                     app:layout_constraintStart_toEndOf="@id/store_hearts"
                     app:layout_constraintTop_toTopOf="@id/store_hearts"
