--- a/app/src/main/res/layout/activity_certificate.xml
+++ b/app/src/main/res/layout/activity_certificate.xml
@@ -106,6 +106,7 @@
                     app:layout_constraintTop_toBottomOf="@id/title_textview" />
 
                 <EditText
+                    android:inputType="numberSigned"
                     android:id="@+id/cert_number_edtitext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
