--- a/app/src/main/res/layout/activity_certificate.xml
+++ b/app/src/main/res/layout/activity_certificate.xml
@@ -106,7 +106,6 @@
                     app:layout_constraintTop_toBottomOf="@id/title_textview" />
 
                 <EditText
-                    android:inputType="numberSigned"
                     android:id="@+id/cert_number_edittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -118,6 +117,7 @@
                     android:elevation="5dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
                     android:hint="사업자등록번호"
+                    android:inputType="numberSigned"
                     android:paddingStart="18dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
@@ -418,9 +418,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="8dp"
                     android:background="@drawable/for_elevation_box"
                     android:elevation="5dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
@@ -434,17 +432,18 @@
                     app:layout_constraintTop_toBottomOf="@id/cert_image_textview" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:layout_marginTop="35dp"
-                    app:layout_constraintTop_toBottomOf="@id/cert_image"
-                    android:layout_marginStart="24dp"
-                    android:textSize="16sp"
-                    android:textColor="@color/aquamarine"
-                    android:fontFamily="@font/noto_sans_kr_bold"
-                    android:layout_marginEnd="24dp"
-                    android:text="완료"
-                    android:background="@drawable/button_disable"
+                    android:id="@+id/button"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="35dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="@drawable/button_disable"
+                    android:fontFamily="@font/noto_sans_kr_bold"
+                    android:text="완료"
+                    android:textColor="@color/aquamarine"
+                    android:textSize="16sp"
+                    app:layout_constraintTop_toBottomOf="@id/cert_image" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
