fix: fix typo in layout

--- a/app/src/main/res/layout/activity_certificate.xml
+++ b/app/src/main/res/layout/activity_certificate.xml
@@ -116,7 +116,7 @@
                     android:background="@drawable/for_elevation_box"
                     android:elevation="5dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
-                    android:hint="사업자등록번호"
+                    android:hint="사업자 등록번호"
                     android:inputType="numberSigned"
                     android:paddingStart="18dp"
                     android:paddingTop="15dp"
@@ -253,7 +253,7 @@
                     android:background="@drawable/for_elevation_box"
                     android:elevation="5dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
-                    android:hint="사엄자등록증과 일치해야해요!"
+                    android:hint="사업자등록증과 일치해야해요!"
                     android:paddingStart="18dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
@@ -321,7 +321,7 @@
                     android:background="@drawable/for_elevation_box"
                     android:elevation="5dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
-                    android:hint="사엄자등록증과 일치해야해요!"
+                    android:hint="사업자등록증과 일치해야해요!"
                     android:paddingStart="18dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
@@ -390,7 +390,7 @@
                     android:background="@drawable/for_elevation_box"
                     android:elevation="5dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
-                    android:hint="사엄자등록증과 일치해야해요!"
+                    android:hint="사업자등록증과 일치해야해요!"
                     android:paddingStart="18dp"
                     android:paddingTop="15dp"
                     android:paddingBottom="15dp"
@@ -419,6 +419,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
                     android:background="@drawable/for_elevation_box"
                     android:elevation="5dp"
                     android:fontFamily="@font/noto_sans_kr_medium"
