--- a/app/src/main/res/layout/activity_edit_store_info.xml
+++ b/app/src/main/res/layout/activity_edit_store_info.xml
@@ -134,12 +134,12 @@
                     android:layout_marginTop="10dp"
                     android:background="@null"
                     android:fontFamily="@font/noto_sans_kr_regular"
-                    android:hint="가게 이름을 입력해주세요!"
+                    android:hint="가게 카테고리를 입력해주세요!"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/store_category_textview"
-                    tools:text="봉구수 밥버거" />
+                    tools:text="카페" />
 
                 <TextView
                     android:id="@+id/image_preview_textview"
