refactor: add go to edit info button id

--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -165,6 +165,7 @@
                         tools:text="23" />
 
                     <Button
+                        android:id="@+id/go_to_edit_info_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/aquamarine"
